[gd_scene load_steps=5 format=2]

[ext_resource path="res://3d models/cactus.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/PlayerCharacter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/PrefabScripts/CharacterGroup.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.07956, 2.06603, 1.11127 )

[node name="CharacterGroup" type="KinematicBody"]
script = ExtResource( 3 )

[node name="Player1" parent="." instance=ExtResource( 2 )]

[node name="Player2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )

[node name="Player3" parent="." instance=ExtResource( 2 )]

[node name="Pivot" type="Spatial" parent="."]

[node name="cactus2" parent="Pivot" instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.116569, 2.03865, -0.360607 )
shape = SubResource( 1 )

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15.2259 )
